# learn_gsd

./: CHANGELOG.md  ISSUES.md  README.md  pyproject.toml
.planning/: GSD_PROMPT_INTEGRATION_ANALYSIS.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/00.1-integrate-gsd-patterns/: .continue-here.md  00.1-01-PLAN.md
.planning/phases/01-foundation-templates/: 01-04-PLAN.md
.planning/phases/01.3-context-lifecycle-coaching-workflow-decomposition/: 01.3-01-PLAN.md  01.3-02-PLAN.md  01.3-03-PLAN.md  01.3-04-PLAN.md  01.3-05-PLAN.md
.planning/phases/01.7-refactor-artifacts-and-protocols-and-workflows-to-synergy-with-grep/: 01.7-01-PLAN.md  01.7-CONTEXT.md
.planning/templates/: BOOTLOADER_TEMPLATE.md  PROTOCOL_REFERENCE.md  README.md  STATE_TEMPLATE.md
gsd-lite/: STATE.md
gsd-lite/workflows/: checkpoint.md  moodboard.md
gsd_lite/: HISTORY.md  INBOX.md  PROTOCOL.md  STATE.md  WORK.md
gsd_lite/template/: INBOX.md  PROTOCOL.md  STATE.md
src/gsd_lite/: __main__.py
src/gsd_lite/template/: PROTOCOL.md  README.md  STATE.md  WORK.md
src/gsd_lite/template/workflows/: checkpoint.md  execution.md  housekeeping.md  moodboard.md  promotion.md  revisit.md  whiteboard.md
