[project]
name = "gsd-lite"
version = "0.1.0"
description = "A minimal protocol for Getting Things Done with AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
gsd-lite = "gsd_lite.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsd_lite"]
